# multi-chat-mcp-server

./: .gitignore  ADVANCED_SEARCH.md  CONTRIBUTING.md  COPYRIGHT  LICENSE  README.md  TESTING.md  TOKEN_MANAGEMENT.md  check_token.py  google_chat.py  google_chat_mcp_architecture.puml  google_chat_mcp_authentication_flow.puml  google_chat_mcp_component_diagram.puml  google_chat_mcp_overall_structure.puml  google_chat_mcp_workflow.puml  provider-config.yaml  pyproject.toml  pytest.ini  refresh_token.py  rename_repo.md  requirements.txt  run_tests.py  search_config.yaml  search_manager.py  server.py  test_api_direct.py  test_google_chat_tools.py  test_semantic.py
diagrams/puml/: architecture_diagram.puml  authentication_flow.puml  data_flow_diagram.puml  tools_structure_diagram.puml  user_workflow_diagram.puml
docs/: ADVANCED_SEARCH.md  CONTRIBUTING.md  CONTRIBUTOR_LICENSE_AGREEMENT.md  COPYRIGHT  PROVIDER_SPECIFIC_DEVELOPMENT_DEMO.md  PROVIDER_SPECIFIC_DEVELOPMENT_WALKTHROUGH.md  SEARCH_RECIPES.md  TEST_IMPROVEMENTS.md  provider-development.md
experiments/: mock_search.py  mock_search_term_check.py  mock_tool_api.py
src/: __init__.py  mcp_instance.py  search_manager.py  server.py  server_auth.py
src/google_chat/: advanced_search.py  attachments.py  auth.py  card_builder.py  cards.py  constants.py  messages.py  (+6 more)
tests/: __init__.py  test_auth.py  test_file_operations.py  test_messaging.py  test_search_basic.py  test_search_batch.py  test_search_config.py  test_search_unit.py  test_server_api.py  test_token_management.py  test_token_utilities.py  test_user_info.py
(+68 files in other folders)
