[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-gcp-chat-py"
version = "0.1.0"
description = "Google Chat MCP Server for Cursor"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Google Chat MCP Project Contributors"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/username/google-chat-mcp-server"

[tool.pytest]
testpaths = ["tests"]
